Add page to create new warehouse

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <ul id='nav'>
+      <li><%= link_to 'Home', root_path %></li>
+      <li><%= link_to 'New Warehouse', new_warehouse_path %></li>
+    </ul>
     <%= yield %>
   </body>
 </html>
